# Cullinary

backend/: .gitignore  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/: deps.py  utils.py
backend/app/api/endpoints/: auth.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  db.py
backend/app/db/: base.py  models.py
backend/app/utils/: config.py  database.py  deps.py  security.py
frontend/: biome.json  bun.lockb  components.json  modify-openai-json.ts  modify-openapi-operationids.ts  openai-modify.js  openapi-ts.config.ts  openapi.json  package.json  rsbuild.config.ts  tailwind.config.js
frontend/src/: index.css  index.tsx  main.css  routeTree.gen.ts
frontend/src/client/: index.ts  schemas.gen.ts  services.gen.ts  types.gen.ts
frontend/src/client/core/: request.ts
frontend/src/components/common/: Footer.tsx  Header.tsx  NotFound.tsx  RequiredAuth.tsx  Sidebar.tsx  error-page.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: $user.tsx  __root.tsx  index.lazy.tsx  index.tsx  userId.tsx
frontend/src/routes/auth/: login.tsx  signup.lazy.tsx  signup.tsx
